Fixed the card section alignment

--- a/style.css
+++ b/style.css
@@ -448,13 +448,13 @@ html{
     justify-content: center;
     align-items:flex-start;
     flex-wrap: wrap;
-    gap: 3rem;
+    gap: 1.5rem;
 }
 .Card-section{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 1.5rem;
 
 
 }
